Stage 4/5: Retrieving statistics